[package]
name = "zkprover-bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
anyhow = "1"
futures = "0.3"
jsonrpsee = { version = "0.16.2", features = [
    "server",
    "http-client",
    "ws-client",
    "macros",
] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = "1.0.154"
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"
ethers = { version = "2.0.0" }
dotenv = "0.15.0"
mongodb = "2.4.0"
lazy_static = "1.4.0"
